samples/_failures_safe/1761556161_b04ae6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_392a3dba.c: In function ‘main’:
./samples/SAFE/__tmp_392a3dba.c:150:9: error: expected declaration or statement at end of input
  150 |         choice = read_int("Choose operation: ", 1, 5);
      |         ^~~~~~
./samples/SAFE/__tmp_392a3dba.c:150:9: error: expected declaration or statement at end of input
